--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!--Copyright-->
         <div class="footer-copyright">
             <div class="container-fluid">
-                © 2017 Coded by: <a href="http://www.adnanrahic.github.io"> @adnanrahic </a>
+                © 2017 Coded by: <a href="https://adnanrahic.github.io"> @adnanrahic </a>
 
             </div>
         </div>
