--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     <script src="https://use.fontawesome.com/ed9366907b.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/css/mdb.css">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="/app/style.css">
   </head>
   <body>
     <div class="container">
@@ -53,6 +53,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://rawgit.com/adnanrahic/cdn-scrollnav/master/mdb.js"></script>
-    <script src="/assets/script.js"></script>
+    <script src="/app/script.js"></script>
   </body>
 </html>
