--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <title>@adnanrahic Weather App</title>
+    <meta name="description" content="Hyperminimal weather app">
+    <!-- Twitter related metatags -->
+    <meta name="twitter:card"           content="summary_large_image" />
+    <meta name="twitter:site"           content="@raha198" />
+    <meta name="twitter:creator"           content="@raha198" />
+    <meta name="twitter:title"          content="Weather App" />
+    <meta name="twitter:description"    content="Minimal weather app" />
+    <meta name="twitter:url"            content="https://adnanrahic-weather-app.herokuapp.com/" />
+    <meta name="twitter:image"          content="https://adnanrahic-weather-app.herokuapp.com/app/assets/img.jpg" />
+
+    <!-- Facebook related metatags -->
+    <meta property="fb:app_id"          content="" > 
+    <meta property="og:url"             content="https://adnanrahic-weather-app.herokuapp.com/"  > 
+    <meta property="og:title"           content="Weather App" > 
+    <meta property="og:image"           content="https://adnanrahic-weather-app.herokuapp.com/app/assets/img.jpg"  > 
+    <meta property="og:description"     content="Minimal weather app"  >
+
     <base href="/">
     <link rel="shortcut icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
