--- a/app/index.html
+++ b/app/index.html
@@ -9,16 +9,16 @@
     <meta name="twitter:site"           content="@raha198" />
     <meta name="twitter:creator"           content="@raha198" />
     <meta name="twitter:title"          content="Weather App" />
-    <meta name="twitter:description"    content="Minimal weather app" />
-    <meta name="twitter:url"            content="https://adnanrahic-weather-app.herokuapp.com/" />
-    <meta name="twitter:image"          content="https://adnanrahic-weather-app.herokuapp.com/app/assets/img.jpg" />
+    <meta name="twitter:description"    content="Minimal Weather" />
+    <meta name="twitter:url"            content="https://adnanrahic-minimal-weather.herokuapp.com/" />
+    <meta name="twitter:image"          content="https://adnanrahic-minimal-weather.herokuapp.com/app/assets/img.jpg" />
 
     <!-- Facebook related metatags -->
-    <meta property="fb:app_id"          content="" > 
-    <meta property="og:url"             content="https://adnanrahic-weather-app.herokuapp.com/"  > 
+    <meta property="fb:app_id"          content="225162747944375" > 
+    <meta property="og:url"             content="https://adnanrahic-minimal-weather.herokuapp.com/"  > 
     <meta property="og:title"           content="Weather App" > 
-    <meta property="og:image"           content="https://adnanrahic-weather-app.herokuapp.com/app/assets/img.jpg"  > 
-    <meta property="og:description"     content="Minimal weather app"  >
+    <meta property="og:image"           content="https://adnanrahic-minimal-weather.herokuapp.com/app/assets/img.jpg"  > 
+    <meta property="og:description"     content="Minimal Weather"  >
 
     <base href="/">
     <link rel="shortcut icon" href="/favicon.ico">
