--- a/app/index.html
+++ b/app/index.html
@@ -8,17 +8,17 @@
     <meta name="twitter:card"           content="summary_large_image" />
     <meta name="twitter:site"           content="@raha198" />
     <meta name="twitter:creator"           content="@raha198" />
-    <meta name="twitter:title"          content="Weather App" />
-    <meta name="twitter:description"    content="Minimal Weather" />
+    <meta name="twitter:title"          content="Minimal Weather" />
+    <meta name="twitter:description"    content="A simple hyperminimal weather application coded in vanilla JS" />
     <meta name="twitter:url"            content="https://adnanrahic-minimal-weather.herokuapp.com/" />
     <meta name="twitter:image"          content="https://adnanrahic-minimal-weather.herokuapp.com/app/assets/img.jpg" />
 
     <!-- Facebook related metatags -->
     <meta property="fb:app_id"          content="225162747944375" > 
     <meta property="og:url"             content="https://adnanrahic-minimal-weather.herokuapp.com/"  > 
-    <meta property="og:title"           content="Weather App" > 
+    <meta property="og:title"           content="Minimal Weather" > 
     <meta property="og:image"           content="https://adnanrahic-minimal-weather.herokuapp.com/app/assets/img.jpg"  > 
-    <meta property="og:description"     content="Minimal Weather"  >
+    <meta property="og:description"     content="A simple hyperminimal weather application coded in vanilla JS"  >
 
     <base href="/">
     <link rel="shortcut icon" href="/favicon.ico">
