--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>@adnanrahic Weather App</title>
-    <meta name="description" content="Hyperminimal weather app">
+    <title>Minimal Weather</title>
+    <meta name="description" content="A simple hyperminimal weather application coded in vanilla JS">
     <!-- Twitter related metatags -->
     <meta name="twitter:card"           content="summary_large_image" />
     <meta name="twitter:site"           content="@raha198" />
