--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
         <!--Copyright-->
         <div class="footer-copyright">
             <div class="container-fluid">
-                © 2017 Coded by: <a href="https://adnanrahic.github.io"> @adnanrahic </a>
+                © 2017 Coded by: <a href="https://adnanrahic.github.io" target="_blank"> @adnanrahic </a>
 
             </div>
         </div>
